...
                                                    <subviews>
                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Euo-Q2-9N4">
                                                            <rect key="frame" x="0.0" y="0.0" width="183.5" height="93"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Icr-H2-skg">
                                                                    <rect key="frame" x="32" y="32" width="119.5" height="29"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="cellGoalLabel"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                                    <color key="textColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                            </subviews>
                                                            <edgeInsets key="layoutMargins" top="32" left="32" bottom="32" right="32"/>
...
                                        <constraint firstItem="KkW-ib-e2N" firstAttribute="leading" secondItem="yjw-gB-brk" secondAttribute="leadingMargin" id="Iqr-hz-129"/>
                                    </constraints>
                                    <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                </collectionViewCellContentView>
                                <connections>
                                    <outlet property="addGoalParentView" destination="0kp-3J-ebS" id="aqO-3K-Iht"/>
                                    <outlet property="goalLabel" destination="Icr-H2-skg" id="oQQ-Xh-j3a"/>
                                </connections>
                            </collectionViewCell>
                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="WaterLoggingProgressCollectionViewCell" translatesAutoresizingMaskIntoConstraints="NO" id="0yZ-NX-huf" customClass="WaterLoggingProgressCollectionViewCell" customModule="WaterLogging" customModuleProvider="target">
                                <rect key="frame" x="153.5" y="137" width="107" height="116"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mdg-sc-v3T">
...
                                                        <connections>
                                                            <action selector="sliderValueDidChange:" destination="J3O-9R-Zvk" eventType="valueChanged" id="v7b-OW-VTN"/>
                                                        </connections>
                                                    </slider>
                                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SNJ-5O-tdN">
                                                        <rect key="frame" x="130.5" y="530" width="153" height="0.0"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="setGoalButton"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                        <inset key="contentEdgeInsets" minX="32" minY="16" maxX="32" maxY="16"/>
                                                        <state key="normal" title="Set Goal">
                                                            <color key="titleColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
...
